--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>2.4</version>
         </dependency>
         <dependency>
+            <groupId>org.fcrepo</groupId>
+            <artifactId>fcrepo-oaiprovider</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>eu.scape-project.model</groupId>
             <artifactId>scape-platform-datamodel</artifactId>
             <version>${scape-platform-datamodel.version}</version>
