added Application for Jersey 2 and updated api calls

--- a/src/test/resources/integration-tests/referenced-content/web.xml
+++ b/src/test/resources/integration-tests/referenced-content/web.xml
@@ -22,7 +22,7 @@
 
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>org.fcrepo.http.commons.FedoraApplication</param-value>
+            <param-value>eu.scape_project.SCAPEFedoraApplication</param-value>
         </init-param>
 
         <load-on-startup>1</load-on-startup>
